Criando a mensagem do anúncio

--- a/app/views/campaign_mailer/shot.html.erb
+++ b/app/views/campaign_mailer/shot.html.erb
@@ -1,1 +1,12 @@
-<%= @shot.campaign.name %>
+<p>
+  Estive dando uma olhada em algumas formas de ganhar uma graninha extra pra ver se adianto aquela viagem e encontrei esse curso online que parece ser maneiro. Ele ensina a multiplicar suas milhas do cartão e do km de vantagens.
+</p>
+<p>
+  Acredito que vc vá gostar tbm. Depois me diz o que achou.
+</p>
+<p>
+  Segue o link: <a href="http://bit.ly/WiBYC5">http://bit.ly/WiBYC5</a>
+</p>
+<p>
+  :D
+</p>
