--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Afiliados</title>
+    <title>Email Marketing</title>
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= csrf_meta_tags %>
 
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to 'Afiliados', root_path, class: 'navbar-brand' %>
+          <%= link_to 'Email Marketing', root_path, class: 'navbar-brand' %>
         </div>
         <div class="navbar-collapse collapse">
           <% if current_user.present? %>
