--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,14 +31,14 @@
           <% if current_user.present? %>
             <ul class="nav navbar-nav">
               <%= menu_link_to 'Campanhas', campaigns_path %>
-              <li><%= link_to 'Sidekiq', sidekiq_web_path %></li>
             </ul>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user.present? %>
+              <li><%= link_to 'Sidekiq\'s Dashboard', sidekiq_web_path %></li>
               <%= menu_link_to 'Sair', destroy_user_session_path, data: {method: :delete} %>
             <% else %>
-              <%= menu_link_to 'Entrar', new_user_session_path %>
+              <li><%= link_to 'Entrar', new_user_session_path %></li>
             <% end %>
           </ul>
         </div>
