--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -47,7 +47,7 @@
         <legend>Lista</legend>
 
         <p class="small">
-          Emails únicos no banco de dados: <strong class="total-email-count"><%= Email.count %></strong>
+          Emails únicos no banco de dados: <strong class="emails-count"><%= Email.count %></strong>
         </p>
 
         <p class="small">
