Pequena melhoria no código

--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -10,7 +10,7 @@
 
       <div class="modal-body">
         <div class="row">
-          <div class="col-xs-3">
+          <div class="col-xs-4 col-sm-3">
             <%= form_for :list do %>
               <div class="btn btn-sm btn-primary btn-block fileinput-button">
                 <span>Selecionar...</span>
@@ -19,7 +19,7 @@
             <% end %>
           </div>
 
-          <div class="col-xs-9" style="padding-left: 0">
+          <div class="col-xs-8 col-sm-9" style="padding-left: 0">
             <div class="progress progress-striped">
               <div class="progress-bar progress-bar-primary">0%</div>
             </div>
