Melhorando a lista de Listas

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,12 @@ body {
   padding: 66px 0 15px;
 }
 
+.jumbotron {
+  h1 {
+    margin-top: -10px;
+  }
+}
+
 .btn-new {
   display: inline-block;
   margin-top: -8px;
