--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -25,6 +25,17 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <p class="small">
+              Você pode enviar mais de uma lista por vez. Após enviá-las, elas serão importadas em segundo plano e logo estarão prontas para serem usadas em suas campanhas.
+            </p>
+
+            <p class="small">
+              Envie apenas arquivos <i>.csv</i> e <i>.txt</i> com no máximo <i>10 MB</i>.
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="modal-footer">
