--- a/app/assets/stylesheets/list/new.css.scss
+++ b/app/assets/stylesheets/list/new.css.scss
@@ -1,12 +1,20 @@
 .lists-index {
   .progress {
-    margin-bottom: 0;
     height: 30px;
 
     .progress-bar {
       padding-top: 5px;
       min-width: 2em;
-      vertical-align: middle;
+    }
+  }
+
+  p {
+    &.small {
+      font-size: .9em;
+    }
+
+    &.small:last-child {
+      margin-bottom: 0;
     }
   }
 
