--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,12 +12,19 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>Nome do Arquivo</th>
+          <th colspan="2">Nome do Arquivo</th>
         </tr>
       </thead>
       <tbody>
         <% @lists.each do |list| %>
-          <tr><td><%= list.name %></td></tr>
+          <tr>
+            <td>
+              <%= list.name %>
+            </td>
+            <td class="right">
+              <%= link_to glyph(:trash, {}), list_path(list), data: {method: :delete, confirm: 'Tem certeza de que deseja excluir esta lista?'}, class: 'btn btn-xs btn-danger' %>
+            </td>
+          </tr>
         <% end %>
       </tbody>
     </table>
