Adicionando lista de newsletters

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,10 @@ body {
   padding: 66px 0 15px;
 }
 
+.modal-footer {
+  margin-top: 0 !important;
+}
+
 .jumbotron {
   h1 {
     margin-top: -10px;
