--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
             <ul class="nav navbar-nav">
               <%= menu_link_to 'Campanhas', campaigns_path %>
               <%= menu_link_to 'Listas', lists_path %>
+              <%= menu_link_to 'Newsletters', newsletters_path %>
             </ul>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
