--- a/app/views/campaigns/_new.html.erb
+++ b/app/views/campaigns/_new.html.erb
@@ -1,26 +1,48 @@
 <div class="modal fade" id="new-campaign" tabindex="-1" role="dialog" aria-labelledby="new-campaign-title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title" id="new-campaign-title">Nova Campanha</h4>
-      </div>
+      <%= form_for :campaign, url: campaigns_path do |f| %>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="new-campaign-title">Nova Campanha</h4>
+        </div>
 
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <%= form_for :campaign do %>
-              <p>Campanha</p>
-            <% end %>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <label for="newsletter_subject">Nome</label>
+                <%= f.text_field :name, class: 'form-control' %>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <label for="newsletter_subject">Lista</label>
+                <%= f.collection_select(:list_id, List.where(import_finished: true).order(:name), :id, :name, {}, {class: 'form-control', multiple: true}) %>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="form-group">
+                <label for="newsletter_subject">Newsletter</label>
+                <%= f.collection_select(:newsletter_id, Newsletter.order(:subject), :id, :subject, {}, {class: 'form-control'}) %>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Fechar">Fechar</button>
-      </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Fechar">Fechar</button>
+          <input type="submit" class="btn btn-sm btn-primary pull-right" value="Criar Campanha">
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
