--- a/app/views/newsletters/_new.html.erb
+++ b/app/views/newsletters/_new.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade" id="new-newsletter" tabindex="-1" role="dialog" aria-labelledby="new-newsletter-title" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <%= form_for :newsletter do |f| %>
+      <%= form_for :newsletter, url: newsletters_path do |f| %>
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
             <span aria-hidden="true">&times;</span>
