Adicionando esboço das estatísticas às Campanhas

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -13,16 +13,26 @@
       <thead>
         <tr>
           <th>Nome da Campanha</th>
-          <th colspan="2">Status</th>
+          <th>Status</th>
+          <th>Alcance</th>
+          <th>Enviados</th>
+          <th>Entregues</th>
+          <th>Abertos</th>
+          <th colspan="2">Clicados</th>
         </tr>
       </thead>
       <tbody>
         <% @campaigns.each do |campaign| %>
           <tr>
             <td><%= campaign.name %></td>
-            <td><%= campaign.chase_prepared ? 'Pronta para Disparar' : 'Preparando' %></td>
+            <td><%= campaign.list_items.count == campaign.shots.queued.count ? 'Disparada' : campaign.status %></td>
+            <td><%= campaign.list_items.count %></td>
+            <td><%= campaign.shots.queued.count %></td>
+            <td><%= campaign.shots.relayed.count %></td>
+            <td>0</td>
+            <td>0</td>
             <td class="right">
-              <%= link_to 'Disparar!', campaign_chase_path(campaign), class: "btn btn-xs btn-success #{'disabled' if not campaign.chase_prepared}" %>
+              <%= link_to 'Disparar!', campaign_chase_path(campaign), class: "btn btn-xs btn-success #{'disabled' if not campaign.status == 'Pronta para Disparar'}" %>
             </td>
           </tr>
         <% end %>
